# admixfrog

./: .gitignore  AUTHORS  ChangeLog  README.md  build.py  hmm.html  hmm.pyx  hmm2.pyx  introgression.py  introgression2019.py  introgression_simple.py  lomax.R  prototype.R  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
admixfrog/: __init__.py  admixfrog.py  admixslug.py  admixslug_old.py  bam.py  baum_welch.py  cydistributions.c  cyread_emissions.c  cyread_emissions.pyx  decode.py  distributions.c  distributions.pxd  distributions.pyx  emissions.py  fwd_bwd.py  geno_hash.pyx  geno_io.py  genotype_emissions.py  gllmode_emissions.py  gtmode_emissions.py  hmm.pyx  hmm_updates.c  hmm_updates.pyx  hmmbb.pyx  interface.py  interface_frog.py  interface_io.py  interface_slug.py  introgression.py  introgression_bb.py  io.py  log.py  options.py  posterior_geno.py  read_emissions.c  read_emissions.pyx  read_emissions2.py  rle.py  slug_classes.py  slug_em_reads.py  (+5 more)
admixfrog/frog/: __init__.py  admixfrog.py  classes.py  decode.py  fwd_bwd.py  rle.py  utils.py
admixfrog/gll/: genotype_emissions.py  gllmode_emissions.py  read_emissions.c  read_emissions.pyx  read_emissions2.py
admixfrog/old/: admixslug_old.py  gtmode_emissions.py  hmm.pyx  introgression.py  slug_emissions.py
admixfrog/pgdirect/: blocks.py  callback.py  fastbam.py  gt.py  io.py  sampleset.py  stats.py  utils.py
admixfrog/slug/: __init__.py  admixslug.py  classes.py  em.py  em_reads.py  emissions.py  emissions_reads.py  fstats.py
admixfrog/slug/old/: slug_em.py  slug_emissions.py
admixfrog/utils/: bam.py  classes.py  cydistributions.pxd  distributions.c  geno_hash.c  geno_io.py  input.py  io.py  log.py  output.py  output_frog.py  output_slug.py  pars.py  squarem.py  states.py  utils.py  vcf.py
admixfrog/utils/pgdirect/: __init__.py  blocks.py  callback.py  conf.py  gt.py  io.py  sample.py  sampleset.py  snp.py  stats.py  utils.py
docs/: admixfrog.tex  admixfrog_draft_notes.tex  admixslug.tex  admixslug2.tex  compile.sh  main.bib
pipeline/: .gitignore  README.md  Snakefile  change_colors.sh  colors.yaml  link_laurits.sh  rec.snake  run_snakemake_eva.sh  submission.snake  tests.snake
pipeline/annotation/: chrom_limits.csv
pipeline/config/: cluster.yaml  config.yaml  data.yaml  panels.yaml  regions.yaml
pipeline/figures/svg_templates/: .fig2_d28.svg.swp
pipeline/scripts/: bedrec.R  call_frags.R  call_frags2.R  comparison_plot.R  config.R  cont_table.R  d_test.R  decay.R  est_pars.R  est_pars2.R  est_pars_rle.R  load.R  meancol.R  merge_cont.R  merge_res2.R  most_recent_geneflow.R  plot_frags.R  prep_hmm2.R  prep_hmm_vcf.R  run_stan.R  run_stan_frag.R  run_stan_frag_mcmc.R  runs_em.R  simple_cont.R  test_bval.R  tracks_simple.R
pipeline/scripts/paper/: altai_downsample.R  annotate_bval.R  d2_vs_d8.R  downsample_plot.R  experiments.R  fig1.R  fig2.R  gene_annotation.R  gofuncr.R  long_frag.R  long_frag_abkh.R  long_frag_generic.R  overview.R  overview_table.R  overview_wrap.R  pw_stuff.R  runs_single.R  salkhit.R  salkhit2.R  tables.R  test_altai.R  ui_downsample.R  ui_downsample2.R  validate_altai.R  validate_c8.R  validate_d2.R  validate_d3.R  validate_d8.R  validate_mez1.R  validation.R
pipeline/scripts/plotting/: fit.R  hmm_cont.R  hmm_overview.R  hmm_panel_marginal.R  hmm_panel_pw.R  hmm_region.R  hmm_rle.R  hmm_rlefit.R  hmm_rlepred.R  hmm_runs.R  lib.R  meancol.R  rle2.R  rle2fit.R
pipeline/scripts/plotting2/: llr.R  new_merge.R  present_vs_old.R  rle.R  simple_fit.R
plotting/: comparison_plot.R  lomax.R
test/: test_hmmbb.py  test_io.sh
test/data/: oase_chr9.in.xz
tests/: .gitignore  README.md  test_basicio.py  test_binning.py  test_geno.py  test_hw.py  test_inbreeding.py  test_prior.py  test_readme.py  test_ref.py  test_sfs.py  test_slug.py  test_slug_reads.py  test_updates.py  test_vcfgt.py
tests/data/: chag_gt.csv.xz  convertf2.par  maps_chr.21  maps_chr.9  maps_chr.X  oase.bed  oase.bim  oase.fam  oase.geno  oase.ind  oase.pops  oase.snp  oase.vcf.gz.csi  oase_chr9.bam  oase_chr9.bam.bai  oase_chr9_sfs.in.xz  oase_chrX.bam  oase_chrX.bam.bai  oase_small.vcf.gz.csi  pops.yaml  pops2.yaml  ref_A1240k.csv.xz  ref_A1240k_9X.csv.xz  test_oase15.geno  test_oase15.snp  tmat.txt  vindija_chr9.in.xz
tests/data/convert/: convert1.par  convertf.par  convertf.py  merge1.par
tests/res/: empty.txt
tests/scripts/: test_bam_plot.R
