[tool.poetry]
name = "admixfrog"
version = "0.0.0"
description = "Local Ancestry Inference for low-coverage ancient DNA data"
authors = ["benjamin_peter <benjamin_peter@eva.mpg.de>"]
license = "BSD"
readme = "README.md"
packages = [
    { include = "admixfrog" },
]
include = [
    # C extensions must be included in the wheel distributions
    { path = "admixfrog/gll/*.so", format = "wheel" },
    { path = "admixfrog/utils/*.so", format = "wheel" },
]

[build-system]
requires = ["poetry-core>=1.2.0", 
    "poetry-dynamic-versioning", 
    "setuptools", 
    "Cython>=0.29",
    "scipy>=1.1"]
#build-backend = "poetry.core.masonry.api"
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.build]
generate-setup-file = true
script = 'build.py'

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=2.0"
numba = ">=0.53"
numpy = ">=1.23"
scipy = ">=1.1"
pybedtools = ">=0.10"
pysam = ">=0.15.0"
pyyaml = ">=5.0"
Cython = ">=3.0"
setuptools = ">=75"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-console-scripts = ">= 1.4.1"
pytest-coverage = "^0.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = false
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"


[tool.poetry.scripts]
admixfrog = 'admixfrog:run_frog'
admixfrog-bam = 'admixfrog:bam'
admixfrog-bam2 = 'admixfrog:bam2'
admixfrog-rle = 'admixfrog:do_rle'
admixfrog-profile = 'admixfrog:profile_frog'
admixslug-profile = 'admixfrog:profile_slug'
admixfrog-ref = 'admixfrog:do_ref'
admixslug = 'admixfrog:run_sfs'

