[metadata]
name = admixfrog
summary = detecting introgressed fragments
description = detecting introgressed fragments
description-file = README.md
author = Benjamin Peter
author-email = benjamin.peter@eva.mpg.de
licence = BSD
requires-dist = pbr
requires-python = >=3.6
#version = 0.2


[files]
packages = admixfrog
data_files =
    pipeline = pipeline/*

[entry_points]
console_scripts =
    admixfrog = admixfrog:run
    admixfrog-bam = admixfrog:bam
    admixfrog-rle = admixfrog:do_rle
    admixfrog-profile = admixfrog:profile
    admixfrog-ref = admixfrog:do_ref

[aliases]
test=pytest

[tool:pytest]
#addopts = tests/
filterwarnings =
    ignore:.*Using.*:DeprecationWarning
