[metadata]
name = admixfrog
summary = detecting introgressed fragments
description = detecting introgressed fragments
description-file = README.md
author = Benjamin Peter
author-email = benjamin.peter@eva.mpg.de
licence = BSD
requires-dist = pbr
requires-python = >=3.7


[files]
packages = admixfrog
data_files =
    pipeline = pipeline/*

[entry_points]
console_scripts =
    admixfrog = admixfrog:run_frog
    admixfrog-bam = admixfrog:bam
    admixfrog-bam2 = admixfrog:bam2
    admixfrog-rle = admixfrog:do_rle
    admixfrog-profile = admixfrog:profile_frog
    admixslug-profile = admixfrog:profile_slug
    admixfrog-ref = admixfrog:do_ref
    admixslug = admixfrog:run_sfs

[aliases]
test=pytest

[tool:pytest]
#addopts = tests/
filterwarnings =
    ignore:.*Using.*:DeprecationWarning
